<?xml version="1.0" encoding="utf-8"?>

<!--
Whack-A-Pede
David A. Clark, Jr.
Integrated Product Development
MDV4910-O, C202006-01
-->

<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Application name. -->
    <string name="app_name">Whack-A-Pede</string>

    <!-- Avatar and overlay accessibility descriptions. -->
    <string name="avatar">Player or Guest Avatar</string>
    <string name="overlay">Circular Overlay</string>

    <!-- Game menu actions. -->
    <string name="play_game">Play Game</string>
    <string name="pause_game">Pause Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="quit_game">Quit Game</string>
    <string name="sign_in">Sign In with Google</string>
    <string name="sign_out">Sign Out</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="change_settings">Change Settings</string>
    <string name="view_credits">View Credits</string>
    <string name="view_instructions">View Instructions</string>

    <!-- Fragment labels. -->
    <string name="instructions">Instructions</string>
    <string name="credits">Credits</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="game_over">Game Over</string>

    <!-- Game screen scoreboard static labels. -->
    <string name="guest">Guest</string>
    <string name="time_remaining">Time Remaining:</string>

    <!-- Game screen quit confirmation dialog. -->
    <string name="quit_confirmation_title">Sure you want to quit?</string>
    <string name="quit_confirmation_body">If you quit now, any points or achievements you obtained will be lost.</string>
    <string name="quit_confirmation_yes">Yes, Quit</string>
    <string name="quit_confirmation_no">No, Keep Playing</string>

    <!-- Game over screen score summary. -->
    <string name="final_score" tools:ignore="PluralsCandidate">%,d Final Score</string>

    <plurals name="rounds">
        <item quantity="one">%d Round</item>
        <item quantity="other">%,d Rounds</item>
    </plurals>

    <string name="in_time">in %s</string>
    <string name="rounds_in_time">%s %s</string>

    <plurals name="achievements">
        <item quantity="one">%d New Achievement</item>
        <item quantity="other">%,d New Achievements</item>
    </plurals>

    <!-- Leaderboard screen score summary. -->
    <string name="your_entry">Your Entry</string>
    <string name="top_score" tools:ignore="PluralsCandidate">%,d Top Score</string>
    <string name="placement">%s Place</string>
    <string name="rounds_and_time">%d_%d</string>
    <string name="achievement_avatar">Achievement Avatar</string>
    <string name="your_achievements">Your Achievements</string>

    <plurals name="top_entries">
        <item quantity="one">Top Player Entry</item>
        <item quantity="other">Top %,d Player Entries</item>
    </plurals>

    <!-- Leaderboard screen retrieval status. -->
    <string name="retrieving_image">Retrieval Status Image</string>
    <string name="retrieving_player_leaderboard">Retrieving your leaderboard entry.</string>
    <string name="retrieval_error_player_leaderboard">Could not retrieve your leaderboard entry.</string>
    <string name="retrieving_player_achievements">Retrieving your achievements.</string>
    <string name="retrieval_error_player_achievements">Could not retrieve your achievements.</string>
    <string name="retrieving_top_players_leaderboard">Retrieving the top player leaderboard entries.</string>
    <string name="retrieval_error_top_players_leaderboard">Could not retrieve the top player leaderboard entries.</string>
    <string name="no_achievements">It looks like you have not unlocked any achievements yet.</string>
    <string name="no_top_players_leaderboard">It looks like no one has gotten on the leaderboard yet.</string>
    <string name="only_top_player_leaderboard">It looks like you are the only player on the leaderboard.</string>

    <!-- Game over screen leaderboard sync status. -->
    <string name="sync_image">Sync Status Image</string>
    <string name="syncing">Do not go back just yet.  Syncing to the leaderboard…</string>
    <string name="synced">All synced to the leaderboard.  It is safe to go back now.</string>
    <string name="sync_error">Could not sync to the leaderboard.  Check your Internet connectivity and retry.</string>
    <string name="retry">Retry</string>

    <!-- Game over screen back confirmation dialog. -->
    <string name="back_confirmation_title">Sure you want to go back?</string>
    <string name="back_confirmation_body">Your game is not done syncing to the leaderboard.  You may lose new progress if you go back now.</string>
    <string name="back_confirmation_yes">Yes, Go Back</string>
    <string name="back_confirmation_no">No, Stay</string>

    <!-- Game screen Google Play Games Sign In failure. -->
    <string name="sign_in_fail_title">Could not sign you in.</string>
    <string name="sign_in_fail_body">Servers might be down, or you man not have Internet connectivity.  Please check it and try signing in again later.</string>
    <string name="sign_in_fail_okay">Okay</string>

    <!-- Game screen speedometer static labels for tablets. -->
    <string name="centipede_speed">Centipede Speed (LPH):</string>

    <!-- Game settings. -->
    <string name="sounds">Sounds</string>
    <string name="music_volume">Music Volume</string>
    <string name="music_volume_summary">Adjust the volume of the background music.</string>
    <string name="music_volume_key">music_volume_key</string>
    <string name="effects_volume">Effects Volume</string>
    <string name="effects_volume_summary">Adjust the volume of in-game sound effects.</string>
    <string name="effects_volume_key">effects_volume_key</string>
    <string name="music_track">Music Track</string>
    <string name="music_track_summary">&#8220;%s&#8221; is the music track that will play in the background.</string>
    <string name="music_track_key">music_track_key</string>
    <string name="colors">Colors</string>
    <string name="color_theme">Color Theme</string>
    <string name="color_theme_summary">&#8220;%s&#8221; is the color theme for the lawn and centipedes.</string>
    <string name="color_theme_key">color_theme_key</string>
    <string name="color_theme_preview_key">color_theme_preview_key</string>

    <!-- Music track selection. -->
    <string-array name="music_tracks">
        <item>Mind Bender</item>
        <item>Electric Raindrops</item>
        <item>Pong-A-Long</item>
        <item>Puzzle Caves</item>
    </string-array>

    <!-- Color theme selection. -->
    <string-array name="color_themes">
        <item>Sunny Day</item>
        <item>High Contrast</item>
        <item>Patriotic</item>
        <item>Camouflage</item>
        <item>Zebra Stripes</item>
        <item>Tiger Stripes</item>
        <item>Leopard Spots</item>
    </string-array>

    <!-- Leaderboard menu actions -->
    <string name="view_leaderboard_in_play_games">View Leaderboard in Play Games</string>
    <string name="view_achievements_in_play_games">View Achievements in Play Games</string>

    <!-- Play Game Utility bad Google Sign-in account alert dialog -->
    <string name="bad_account_title">Something went wrong.</string>
    <string name="bad_account_body">Please try again after logging out and back in again.</string>
    <string name="bad_account_okay">Okay</string>
    <string name="whack_a_pede_logo">Whack-A-Pede Logo</string>

    <!-- Credits screen. -->
    <string name="credits_game_design">Game Design by David Clark at <a href="profile.fullsail.edu">profile.fullsail.edu</a></string>
    <string name="credits_graphics">Basic Graphics by David Clark at <a href="profile.fullsail.edu">profile.fullsail.edu</a></string>
    <string name="credits_music">Music by Eric Matyas at <a href="www.soundimage.org">www.soundimage.org</a></string>
    <string name="credits_sound_effects">Sound Effects by ZapSplat at <a href="www.zapsplat.com">www.zapsplat.com</a></string>
    <string name="sound_effects_credit">Sound Effects Credit</string>
    <string name="music_credit">Music Credit</string>
    <string name="graphics_credit">Graphics Credit</string>
    <string name="game_design_credit">Game Design Credit</string>
    <string name="camo_texture">Camouflage Texture by Lupasco Roman at <a href="www.istockphoto.com/portfolio/lupascoroman">www.istockphoto.com</a></string>
    <string name="animal_texture">Animal Textures by Natalia Darmoroz at <a href="www.istockphoto.com/portfolio/nataliadar">www.istockphoto.com</a></string>

    <!-- Theme preview image descriptions -->
    <string name="centipede_body_above_ground">Centipede Body Above Ground</string>
    <string name="centipede_head_above_ground">Centipede Head Above Ground</string>
    <string name="lawn_top">Lawn Top</string>
    <string name="centipede_body_below_ground">Centipede Body Below Ground</string>
    <string name="centipede_head_below_ground">Centipede Head Below Ground</string>
    <string name="lawn_bottom">Lawn Bottom</string>
</resources>