<?xml version="1.0" encoding="utf-8"?>

<!--
Whack-A-Pede
David A. Clark, Jr.
Integrated Product Development
MDV4910-O, C202006-01
-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.twilightcitizen.whack_a_pede.activities.GameActivity">

    <item
        android:id="@+id/action_play_game"
        android:title="@string/play_game"
        android:icon="@drawable/icon_play"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_pause_game"
        android:title="@string/pause_game"
        android:icon="@drawable/icon_pause"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_resume_game"
        android:title="@string/resume_game"
        android:icon="@drawable/icon_play"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_quit_game"
        android:title="@string/quit_game"
        android:icon="@drawable/icon_quit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_in"
        android:title="@string/sign_in"
        android:icon="@drawable/icon_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_out"
        android:title="@string/sign_out"
        android:icon="@drawable/icon_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_leaderboard"
        android:title="@string/view_leaderboard"
        android:icon="@drawable/icon_leaderboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_settings"
        android:title="@string/change_settings"
        android:icon="@drawable/icon_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_credits"
        android:title="@string/view_credits"
        android:icon="@drawable/icon_credits"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_instructions"
        android:title="@string/view_instructions"
        android:icon="@drawable/icon_instructions"
        app:showAsAction="never" />
</menu>